k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsync-mongo-service
  labels:
    app: devsync-mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
    name: mongo
  selector:
    app: devsync-mongo
  type: ClusterIP
