k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsync-server-service
  labels:
    app: devsync-server
spec:
  ports:
  - port: 4000
    targetPort: 4000
    name: http
  selector:
    app: devsync-server
  type: ClusterIP
